<resources>
    <string name="app_name">Parley</string>

    <!-- Strings used by activity_settings.xml -->
    <string name="save">SAVE</string>
    <string name="background_prompt">Choose Background Color</string>
    <string name="font_button">Customize Font</string>
    <string name="circle">Circle</string>
    <string name="hexagon">Hexagon</string>
    <string name="quote">Quote Bubble</string>
    <string name="triangle">Triangle</string>
    <string name="star">Star</string>
    <string name="textBubbleShape">Text Bubble Shape</string>
    <string name="notificationSetting">Notification Settings</string>
    <string name="vibrate">Vibrate</string>
    <string name="ringtone">Ringtone</string>
    <string name="light">Light</string>
    <string-array name="light">
        <item>White (default)</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Pink</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>Cyan</item>
    </string-array>
    <string name="title_activity_font_settings">FontSettings</string>

    <!-- Strings used by activity_font_settings -->
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="style">Font Style</string>
    <string-array name="fontSizes">
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>20</item>
        <item>22</item>
        <item>24</item>
        <item>26</item>
        <item>28</item>
    </string-array>
    <array name="colorReferences">
        <item>@android:color/black</item>
        <item>@android:color/holo_red_light</item>
        <item>@android:color/holo_orange_dark</item>
        <item>@android:color/holo_green_light</item>
        <item>@android:color/holo_blue_light</item>
        <item>@android:color/holo_purple</item>
    </array>
    <string-array name="fontColors">
        <item>black</item>
        <item>red</item>
        <item>orange</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
    </string-array>
    <string-array name="bubbleColors">
    <item>white</item>
    <item>red</item>
    <item>orange</item>
    <item>green</item>
    <item>blue</item>
    <item>purple</item>
    <item>black</item>
    </string-array>
    <string-array name="fontStyles">
        <item>sans-serif</item>
        <item>serif</item>
        <item>casual</item>
        <item>cursive</item>
        <item>monospace</item>
    </string-array>
    <string-array name="background">
        <item>white</item>
        <item>red</item>
        <item>orange</item>
        <item>green</item>
        <item>blue</item>
        <item>purple</item>
    </string-array>
    <array name="backgroundReferences">
        <item>@android:color/white</item>
        <item>@android:color/holo_red_light</item>
        <item>@android:color/holo_orange_dark</item>
        <item>@android:color/holo_green_light</item>
        <item>@android:color/holo_blue_light</item>
        <item>@android:color/holo_purple</item>
    </array>


    <!-- Strings used by main_menu.xml -->
    <string name="sign_out">Sign out</string>
    <string name="delete_all">Delete all</string>

    <!-- Strings used by activity_main.xml -->
    <string name="input">Input</string>
    <string name="settings_button">Settings Button</string>
    <string name="choose_text_bubble_color">Choose Text Bubble Color</string>

    <!-- Strings used by MainActivity.java -->
    <string name="sign_out_caps">SIGN OUT</string>
    <string name="delete_all_caps">DELETE ALL</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE THIS MESSAGE</string>

    </resources>
