<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parley.parley.Settings">

    <TextView
        android:id="@+id/editText3"
        android:layout_width="195dp"
        android:layout_height="33dp"
        android:ems="10"
        android:text="@string/background_prompt"
        android:textSize="12sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Spinner
        android:id="@+id/background_color"
        android:layout_width="176dp"
        android:layout_height="31dp"
        android:entries="@array/background"
        android:spinnerMode="dialog"
        android:visibility="visible"
        android:prompt="@string/background_prompt"
        android:layout_below="@id/editText3"
        android:layout_alignParentStart="true"
        app:layout_constraintBottom_toBottomOf="@id/editText3"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/font_button"
        android:layout_toEndOf="@id/background_color"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/editText"
        android:layout_width="154dp"
        android:layout_height="36dp"
        android:ems="10"
        android:text="@string/textBubbleShape"
        android:textSize="12sp"
        android:layout_below="@id/background_color"
        android:layout_alignParentStart="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/background_color"/>

    <TextView
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/notificationSetting"
        android:layout_below="@id/button2"
        tools:layout_editor_absoluteY="326dp"
        tools:layout_editor_absoluteX="220dp" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vibrate"
        android:layout_below="@id/editText2"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ringtone"
        android:layout_below="@id/checkBox"/>

    <Spinner
        android:id="@+id/ringtoneChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="visible"
        android:layout_below="@id/checkBox2">
        </Spinner>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:layout_below="@id/ringtoneChooser"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Spinner
        android:id="@+id/lightChooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:visibility="visible"
        android:layout_below="@id/checkBox3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </Spinner>

    <RadioGroup
        android:layout_width="181dp"
        android:layout_height="224dp"
        android:id="@+id/radioButtons"
        android:layout_below="@id/background_color"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="259dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/circle" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/circle"
            app:srcCompat="@drawable/circle" />

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/star" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:contentDescription="@string/star"
            app:srcCompat="@drawable/star" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/triangle" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="48dp"
            android:layout_height="17dp"
            android:contentDescription="@string/triangle"
            app:srcCompat="@drawable/triangle" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hexagon" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/hexagon"
            app:srcCompat="@drawable/hexagon" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quote" />
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/quote"
            app:srcCompat="@drawable/quote" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>
